<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.accen</groupId>
  <artifactId>accenbot-render</artifactId>
  <version>1.0</version>
  <properties>
  	<java.version>15</java.version>
  </properties>
  <build>
  	<plugins>
  		<plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
               <compilerArgs>--enable-preview</compilerArgs>
               <source>15</source>
               <target>15</target>
           </configuration>
       </plugin>
  	</plugins>
  </build>
</project>